# eiso

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: comparison.md  lifecycle.md  quickstart.md
eiso/: __init__.py  cli.py  engine.py  extractor.py  schema.py  setup.py  vector.py
examples/: basic_usage.py  character_bot.py
tests/: test_engine.py  test_extractor.py  test_vector.py
