[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "eiso"
version = "1.0.0"
description = "Eiso — Zero-Dependency AI Memory Engine for Character Continuity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
eiso = "eiso.cli:main"

[tool.setuptools.packages.find]
where = ["."]
